--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="app">{{ message }}</div>
+    <div id="app">{{ message }} David!</div>
 
     <!-- production version, optimized for size and speed -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
@@ -16,7 +16,7 @@
       var app = new Vue({
         el: "#app",
         data: {
-          message: "Hello Vue!"
+          message: "Hello"
         }
       });
     </script>
